Updated Activities section (flex class)

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
       <section class="section section--desktop-only">
         <div class="container">
           <h2 class="section__title">Чем мы занимаемся</h2>
-          <ul class="activities list flex">
+          <ul class="activities list">
             <li class="activities__item">
               <div class="activities__thumb">
                 <img
